# fake86

./: CHANGELOG.md  CMakeLists.txt  README.md
bios/: PCXTBIOS.ASM
docs/: limems40.txt
src/80x86/: cpu.c  cpu.h  modregrm.h
src/audio/: audio.c
src/common/: common.h  config.h  log.c
src/cpu/: cpu.c  cpu.h  cpu_mod_rm.h  cpu_priv.h  cpu_redux.c  cpu_udis.c
src/disk/: disk.c  disk.h  disk_img.c  disk_raw.c  disk_vhd.c
src/fake86/: adlib.c  ata.c  audio.c  audio.h  blaster.c  blaster.h  cga_font.c  cmos.c  common.h  config.h  console.c  disk.c  disk.h  dos.c  i8042.c  i8237.c  i8237.h  i8253.c  i8253.h  i8255.c  i8259.c  i8259.h  input.c  interrupt.c  log.c  main.c  memory.c  memory.h  netcard.c  packet.c  palette.c  parsecl.c  ports.c  render.c  rom.c  sermouse.c  sermouse.h  sndsource.c  speaker.c  timing.c  (+4 more)
src/frontend/: assets.c  console.c  events.c  frontend.h  main.c  osd.c  parsecl.c  render.c  render_neo.c  scancode.c  window.c
src/tests/: tests.c
src/tests/opcodes/: main.c
src/video/: cga_font.c  palette.c  render_neo.c  vga_timing.c  video.h  video_neo.c
win32/: fake86.sln  fake86.vcxproj  fake86.vcxproj.filters  imagegen.vcxproj
